--- a/split-landing-page/split-landing-page.css
+++ b/split-landing-page/split-landing-page.css
@@ -3,6 +3,9 @@
     --right-bg-color: rgba(43, 43, 43, 0.8);
     --left-btn-hover-color: rgba(87, 84, 236, 1);
     --right-btn-hover-color: rgba(28, 122, 28, 1);
+    --hover-width: 65%;
+    --other-width: 35%;
+    --speed: 1000ms;
 }
 
 * {
@@ -13,6 +16,7 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    color: #fff;
 }
 
 /* HEADINGS AND BTNS */
@@ -91,6 +95,7 @@ h1 {
     background: url('https://raw.githubusercontent.com/bradtraversy/50projects50days/master/split-landing-page/xbox.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    background-position: 40% 100%;
 }
 
 .split.right::before {
@@ -99,6 +104,29 @@ h1 {
     width: 100%;
     height: 100%;
     background-color: var(--right-bg-color);
+}
+
+.split.right,
+.split.left,
+.split.right::before,
+.split-left::before {
+    transition: all var(--speed) ease-in-out;
+}
+
+.hover-left .left {
+    width: var(--hover-width);
+}
+
+.hover-left .right {
+    width: var(--other-width);
+}
+
+.hover-right .right {
+    width: var(--hover-width);
+}
+
+.hover-right .left {
+    width: var(--other-width);
 }
 
 /* FOOTER */
@@ -110,4 +138,24 @@ footer {
     position: absolute;
     bottom: 0;
     left: 0;
+}
+
+@media screen and (max-width: 800px) {
+    h1 {
+        font-size: 1.7rem;
+        top: 30%;
+    }
+
+    .btn {
+        width: 10rem;
+        padding: 1rem;
+    }
+
+    .split.left {
+        background-position: 16% -100%;
+    }
+
+    .split.right {
+        background-position: 25% 100%;
+    }
 }
